--- a/MyStock/Themes/CommonThemes.xaml
+++ b/MyStock/Themes/CommonThemes.xaml
@@ -42,4 +42,114 @@
         <Setter Property="materialDesign:TextFieldAssist.HasClearButton" Value="True" />
     </Style>
 
+    <!--<Style x:Key="MaterialDesignTabControlBase" TargetType="{x:Type TabControl}">
+        <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type FrameworkElement}}, Path=(TextElement.Foreground)}" />
+        <Setter Property="VerticalContentAlignment" Value="Stretch" />
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="materialDesign:RippleAssist.Feedback" Value="{DynamicResource MaterialDesignFlatButtonRipple}" />
+        <Setter Property="materialDesign:ShadowAssist.ShadowDepth" Value="Depth3" />
+        <Setter Property="materialDesign:ColorZoneAssist.Mode" Value="PrimaryMid" />
+        <Setter Property="materialDesign:ShadowAssist.ShadowEdges" Value="Bottom" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TabControl}">
+                    <DockPanel KeyboardNavigation.TabNavigation="Local">
+                        <materialDesign:Card x:Name="PART_HeaderCard"
+                                             VerticalAlignment="Stretch"
+                                             materialDesign:ShadowAssist.ShadowDepth="{TemplateBinding materialDesign:ShadowAssist.ShadowDepth}"
+                                             materialDesign:ShadowAssist.ShadowEdges="{TemplateBinding materialDesign:ShadowAssist.ShadowEdges}"
+                                             DockPanel.Dock="Top"
+                                             Focusable="False">
+                            <materialDesign:ColorZone VerticalAlignment="Stretch"
+                                                      Background="{TemplateBinding materialDesign:ColorZoneAssist.Background}"
+                                                      Focusable="False">
+
+                                <UniformGrid x:Name="HeaderPanel"
+                                             HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                             VerticalAlignment="Top"
+                                             Focusable="False"
+                                             IsItemsHost="True"
+                                             KeyboardNavigation.TabIndex="1"
+                                             Rows="1" />
+                            </materialDesign:ColorZone>
+                        </materialDesign:Card>
+                        <Border x:Name="PART_BorderSelectedContent"
+                                Padding="{TemplateBinding Padding}"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                Background="{x:Null}"
+                                Focusable="False">
+                            <ContentPresenter x:Name="PART_SelectedContentHost"
+                                              Margin="{TemplateBinding Padding}"
+                                              ContentSource="SelectedContent"
+                                              ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                              ContentTemplate="{TemplateBinding ContentTemplate}"
+                                              ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"
+                                              Focusable="False"
+                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                              TextBlock.Foreground="{Binding ElementName=PART_HeaderCard, Path=Foreground}"
+                                              TextElement.Foreground="{Binding ElementName=PART_HeaderCard, Path=Foreground}" />
+                        </Border>
+                    </DockPanel>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="TabStripPlacement" Value="Bottom">
+                            <Setter TargetName="PART_HeaderCard" Property="DockPanel.Dock" Value="Bottom" />
+                            <Setter Property="materialDesign:ShadowAssist.ShadowEdges" Value="Top" />
+                        </Trigger>
+                        <Trigger Property="TabStripPlacement" Value="Left">
+                            <Setter TargetName="PART_HeaderCard" Property="DockPanel.Dock" Value="Left" />
+                            <Setter TargetName="HeaderPanel" Property="Rows" Value="0" />
+                            <Setter Property="materialDesign:ShadowAssist.ShadowEdges" Value="Right" />
+                            <Setter TargetName="HeaderPanel" Property="Columns" Value="1" />
+                        </Trigger>
+                        <Trigger Property="TabStripPlacement" Value="Right">
+                            <Setter TargetName="PART_HeaderCard" Property="DockPanel.Dock" Value="Right" />
+                            <Setter Property="materialDesign:ShadowAssist.ShadowEdges" Value="Left" />
+                            <Setter TargetName="HeaderPanel" Property="Rows" Value="0" />
+                            <Setter TargetName="HeaderPanel" Property="Columns" Value="1" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="MaterialDesignFilledTabControl"
+           BasedOn="{StaticResource MaterialDesignTabControlBase}"
+           TargetType="{x:Type TabControl}">
+
+        <Style.Triggers>
+            <Trigger Property="materialDesign:ColorZoneAssist.Mode" Value="Standard">
+                <Setter Property="materialDesign:ColorZoneAssist.Background" Value="{DynamicResource MaterialDesignBody}" />
+                <Setter Property="materialDesign:ColorZoneAssist.Foreground" Value="{DynamicResource MaterialDesignBody}" />
+            </Trigger>
+            <Trigger Property="materialDesign:ColorZoneAssist.Mode" Value="PrimaryMid">
+                <Setter Property="materialDesign:ColorZoneAssist.Foreground" Value="{DynamicResource PrimaryHueMidForegroundBrush}" />
+                <Setter Property="materialDesign:ColorZoneAssist.Background" Value="{DynamicResource PrimaryHueMidBrush}" />
+            </Trigger>
+            <Trigger Property="materialDesign:ColorZoneAssist.Mode" Value="PrimaryLight">
+                <Setter Property="materialDesign:ColorZoneAssist.Foreground" Value="{DynamicResource PrimaryHueLightForegroundBrush}" />
+                <Setter Property="materialDesign:ColorZoneAssist.Background" Value="{DynamicResource PrimaryHueLightBrush}" />
+            </Trigger>
+            <Trigger Property="materialDesign:ColorZoneAssist.Mode" Value="PrimaryDark">
+                <Setter Property="materialDesign:ColorZoneAssist.Foreground" Value="{DynamicResource PrimaryHueDarkForegroundBrush}" />
+                <Setter Property="materialDesign:ColorZoneAssist.Background" Value="{DynamicResource PrimaryHueDarkBrush}" />
+            </Trigger>
+            <Trigger Property="materialDesign:ColorZoneAssist.Mode" Value="SecondaryLight">
+                <Setter Property="materialDesign:ColorZoneAssist.Foreground" Value="{DynamicResource SecondaryHueLightForegroundBrush}" />
+                <Setter Property="materialDesign:ColorZoneAssist.Background" Value="{DynamicResource SecondaryHueLightBrush}" />
+            </Trigger>
+            <Trigger Property="materialDesign:ColorZoneAssist.Mode" Value="SecondaryMid">
+                <Setter Property="materialDesign:ColorZoneAssist.Foreground" Value="{DynamicResource SecondaryHueMidForegroundBrush}" />
+                <Setter Property="materialDesign:ColorZoneAssist.Background" Value="{DynamicResource SecondaryHueMidBrush}" />
+            </Trigger>
+            <Trigger Property="materialDesign:ColorZoneAssist.Mode" Value="SecondaryDark">
+                <Setter Property="materialDesign:ColorZoneAssist.Foreground" Value="{DynamicResource SecondaryHueDarkForegroundBrush}" />
+                <Setter Property="materialDesign:ColorZoneAssist.Background" Value="{DynamicResource SecondaryHueDarkBrush}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>-->
+
 </ResourceDictionary>
