--- a/MyStock/Pages/Products/ProductPage.xaml
+++ b/MyStock/Pages/Products/ProductPage.xaml
@@ -7,9 +7,12 @@
                   xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:pages="clr-namespace:MyStock.Pages"
+                  xmlns:productControls="clr-namespace:MyStock.Pages.Products"
+                  xmlns:uomControls="clr-namespace:MyStock.Pages.Uoms"
                   xmlns:viewModel="clr-namespace:MyStock.Application.Products;assembly=MyStock.Application"
                   MinWidth="400"
                   MinHeight="400"
+                  d:DataContext="{d:DesignInstance Type=viewModel:ProductViewModel}"
                   d:DesignHeight="550"
                   d:DesignWidth="650"
                   x:TypeArguments="viewModel:ProductViewModel"
@@ -27,13 +30,13 @@
                                                         Height="24"
                                                         HorizontalAlignment="Center"
                                                         Kind="PackageVariant" />
-                            <TextBlock HorizontalAlignment="Center" Text="Общее" />
+                            <TextBlock HorizontalAlignment="Center" Text="{x:Static langAsset:Translations.Information}" />
                         </StackPanel>
                     </TabItem.Header>
                     <Grid Margin="20,5,10,10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
-                            <RowDefinition Height="60" />
+                            <RowDefinition Height="40" />
                             <RowDefinition Height="60" />
                             <RowDefinition Height="60" />
                             <RowDefinition Height="60" />
@@ -42,19 +45,23 @@
                             <RowDefinition Height="60" />
                             <RowDefinition Height="auto" />
                         </Grid.RowDefinitions>
-                        <StackPanel HorizontalAlignment="Right">
-                            <Button Command="{Binding Close}" Style="{StaticResource MaterialDesignIconForegroundButton}">
+                        <Grid>
+                            <TextBlock HorizontalAlignment="Left"
+                                       VerticalAlignment="Center"
+                                       Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                                       Text="{x:Static langAsset:Translations.Information}" />
+                            <Button HorizontalAlignment="Right"
+                                    Command="{Binding Close}"
+                                    Style="{StaticResource MaterialDesignIconForegroundButton}">
                                 <materialDesign:PackIcon Kind="Close" />
                             </Button>
-                        </StackPanel>
+                        </Grid>
 
-                        <ComboBox Grid.Row="1"
-                                  Margin="0,10"
-                                  VerticalAlignment="Bottom"
-                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Category}"
-                                  DisplayMemberPath="Name"
-                                  ItemsSource="{Binding AvailableCategories}"
-                                  SelectedItem="{Binding Category}" />
+                        <productControls:ProductCategoryFullTextSearch Grid.Row="1"
+                                                                       Margin="0,0,0,0"
+                                                                       DataContext="{Binding CategorySearchViewModel}"
+                                                                       Hint="{x:Static langAsset:Translations.Category}"
+                                                                       ShowSubtitle="False" />
 
                         <TextBox Grid.Row="2"
                                  Margin="0,10"
@@ -62,13 +69,11 @@
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                                  Text="{Binding Description}" />
 
-                        <ComboBox Grid.Row="3"
-                                  Margin="0,10"
-                                  VerticalAlignment="Bottom"
-                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.UOM}"
-                                  DisplayMemberPath="Name"
-                                  ItemsSource="{Binding AvailableUoms}"
-                                  SelectedItem="{Binding Uom}" />
+                        <uomControls:UomFullTextSearch Grid.Row="3"
+                                                       Margin="0,10,0,10"
+                                                       DataContext="{Binding UomSearchViewModel}"
+                                                       Hint="{x:Static langAsset:Translations.UOM}"
+                                                       ShowSubtitle="True" />
 
                         <TextBox Grid.Row="4"
                                  Margin="0,10"
@@ -80,25 +85,15 @@
                                  Margin="0,10"
                                  VerticalAlignment="Bottom"
                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Cost}"
-                                 materialDesign:TextFieldAssist.PrefixText="$ "
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                 Text="{Binding Cost}" />
-
-                        <!--<mah:NumericUpDown Grid.Row="5"
-                                           Margin="0,10"
-                                           VerticalAlignment="Bottom"
-                                           materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Cost}"
-                                           materialDesign:TextFieldAssist.PrefixText="$ "
-                                           TextAlignment="Left"
-                                           Value="{Binding Cost}" />-->
+                                 Text="{Binding Cost, StringFormat=C2}" />
 
                         <TextBox Grid.Row="6"
                                  Margin="0,10"
                                  VerticalAlignment="Bottom"
                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Price}"
-                                 materialDesign:TextFieldAssist.PrefixText="$ "
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                 Text="{Binding Price}" />
+                                 Text="{Binding Price, StringFormat=C2}" />
                         <CheckBox Grid.Row="7"
                                   Content="{x:Static langAsset:Translations.Active}"
                                   IsChecked="{Binding IsActive}" />
@@ -125,44 +120,48 @@
                     <Grid Margin="20,5,10,10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="60" />
                             <RowDefinition Height="*" />
-                            <RowDefinition Height="auto" />
                         </Grid.RowDefinitions>
-                        <StackPanel HorizontalAlignment="Right">
-                            <Button Command="{Binding Close}" Style="{StaticResource MaterialDesignIconForegroundButton}">
+                        <Grid>
+                            <TextBlock HorizontalAlignment="Left"
+                                       VerticalAlignment="Center"
+                                       Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                                       Text="{x:Static langAsset:Translations.StockLevel}" />
+                            <Button HorizontalAlignment="Right"
+                                    Command="{Binding Close}"
+                                    Style="{StaticResource MaterialDesignIconForegroundButton}">
                                 <materialDesign:PackIcon Kind="Close" />
                             </Button>
-                        </StackPanel>
-                        <DataGrid Grid.Row="1"
-                                  AutoGenerateColumns="False"
-                                  CanUserAddRows="False"
-                                  CanUserDeleteRows="False"
-                                  ItemsSource="{Binding StockLevels}">
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Binding="{Binding Entity.Warehouse.Name}"
-                                                    Header="{x:Static langAsset:Translations.Warehouse}"
-                                                    IsReadOnly="True" />
-                                <materialDesign:DataGridTextColumn Binding="{Binding MaxQuantity, UpdateSourceTrigger=PropertyChanged}"
-                                                                   EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
-                                                                   ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
-                                                                   Header="{x:Static langAsset:Translations.MaxQuantity}"
-                                                                   IsReadOnly="False" />
-                                <materialDesign:DataGridTextColumn Binding="{Binding MinQuantity, UpdateSourceTrigger=PropertyChanged}"
-                                                                   EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
-                                                                   ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
-                                                                   Header="{x:Static langAsset:Translations.MinQuantity}"
-                                                                   IsReadOnly="False" />
-                                <DataGridTextColumn Binding="{Binding NetQuantity}"
-                                                    Header="{x:Static langAsset:Translations.NetQuantity}"
-                                                    IsReadOnly="True" />
-                            </DataGrid.Columns>
-                        </DataGrid>
-                        <Button Grid.Row="2"
+                        </Grid>
+
+                        <TextBox Grid.Row="1"
+                                 Margin="0,10"
+                                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.MaxQuantity}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Text="{Binding StockLevel.MaxQuantity}" />
+
+                        <TextBox Grid.Row="2"
+                                 Margin="0,10"
+                                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.MinQuantity}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Text="{Binding StockLevel.MinQuantity}" />
+
+                        <TextBox Grid.Row="3"
+                                 Margin="0,10"
+                                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.NetQuantity}"
+                                 IsEnabled="{Binding IsNew}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Text="{Binding StockLevel.NetQuantity}" />
+
+                        <Button Grid.Row="4"
                                 HorizontalAlignment="Right"
+                                VerticalAlignment="Bottom"
                                 Command="{Binding SaveChange}"
                                 Content="{x:Static langAsset:Translations.Save}"
                                 Style="{StaticResource MaterialDesignRaisedDarkButton}" />
-
                     </Grid>
                 </TabItem>
             </TabControl>
