--- a/MyStock/Pages/Purchases/PurchasePage.xaml
+++ b/MyStock/Pages/Purchases/PurchasePage.xaml
@@ -93,9 +93,9 @@
                 <materialDesign:Card>
                     <StackPanel Orientation="Horizontal">
                         <StackPanel DataContext="{Binding NewLine}" Orientation="Horizontal">
-                            <productControls:ProductFullTextSearch Height="30"
+                            <productControls:ProductFullTextSearch Height="40"
                                                                    MinWidth="200"
-                                                                   Margin="10"
+                                                                   Margin="10,-10,10,0"
                                                                    DataContext="{Binding ProductSearchViewModel}"
                                                                    Hint="{x:Static langAsset:Translations.Product}"
                                                                    IsEnabled="{Binding ElementName=thisPagee, Path=DataContext.IsOpen}" />
@@ -230,7 +230,7 @@
                             <RowDefinition />
                             <RowDefinition Height="auto" />
                         </Grid.RowDefinitions>
-                        <vendorControls:VendorFullTextSearch Height="35"
+                        <vendorControls:VendorFullTextSearch Height="40"
                                                              Margin="0,10"
                                                              DataContext="{Binding VendorSearchViewModel}"
                                                              Hint="{x:Static langAsset:Translations.Vendor}"
